# service-monitor-api

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
app/: main.py
app/api/: dependencies.py  routes.py
app/core/: database.py
app/models/: check_result.py  service.py
app/repositories/: check_result_repository.py  service_repository.py
app/schema/: check_result.py  service.py
app/schemas/: check_result.py  service.py
app/services/: http_checker.py  monitor_service.py
tests/: conftest.py  openapi_test.py  test_services.py
