[project]
name = "service-monitor-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "FAST", # FastAPI-specific rules (e.g., FAST002 for Annotated)
    "T20",  # flake8-print (prevent accidental prints in production)
]

ignore = [
    "D",    # Ignore missing docstrings for basic projects
]

[tool.ruff.lint.isort]
# Ensure imports are grouped correctly for FastAPI projects
known-first-party = ["app"]

[tool.ruff.format]
# Use double quotes, similar to Black
quote-style = "double"
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending
line-ending = "auto"
